# OmniWatch

./: .env.example  .gitignore  ARCHITECTURE.md  omniwatch.local-key.pem  omniwatch.local.pem  package-lock.json  package.json  requirements.txt  walkthrough.md
backend/: check_db.py  main.py  mcp_server.py  modbus_simulator.py  omniwatch.db-shm  omniwatch.db-wal  tasks.py  verify_data.py
backend copy/: log_simulator.py  main.py  mcp_server.py  omniwatch.db-shm  tasks.py
backend copy/api/: prove_route.py  routes.py
backend copy/auth/: __init__.py
backend copy/db/: __init__.py  crud.py  database.py  models.py
backend copy/ingestion/: __init__.py  botsv3_csv_parser.py  models.py
backend copy/mcp_connectors/: __init__.py  notification_server.py
backend copy/narrative/: narrator.py
backend copy/services/: ai_analyst.py  cti_enrichment.py
backend copy/soar/: models.py
backend copy/triage/: engine.py  mitre_map.py  validator.py
backend/api/: __init__.py  abc_routes.py  auth_routes.py  bincode_route.py  ingestion_route.py  routes.py  verify_route.py  webauthn.py  websocket.py
backend/auth/: challenge_store.py  fido2_rp.py  sig_convert.py
backend/cicids/: analyzer.py
backend/db/: crud.py  database.py  models.py
backend/ingestion/: analysis_engine.py  bincode_receiver.py  botsv3_csv_parser.py  botsv3_parser.py  cicids_parser.py
backend/llm/: ollama_client.py
backend/mcp_connectors/: notification_server.py  threat_intel_server.py
backend/monitor/: watchdog_monitor.py
backend/narrative/: __init__.py
backend/services/: ai_analyst.py  botsv3_heuristic.py  cti_enrichment.py  soar_engine.py  trust_chain.py
backend/soar/: __init__.py  engine.py
backend/triage/: __init__.py  engine.py  mitre_map.py  models.py  prompts.py
data/: modbus_telemetry.json
data/botsv3/: .gitkeep
edge/: requirements-edge.txt
edge copy/: serialize_bincode.py  zeek_tap.sh
edge copy/replay/: generate_sample_pcap.py  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend copy/: index.html  package-lock.json  package.json  vite.config.ts
verifier/: Cargo.toml  check_err.txt
verifier copy/: Cargo.toml  check_err_utf8.txt
verifier copy/.cargo/: config.toml
verifier copy/core/: Cargo.toml
verifier copy/core/src/: lib.rs
verifier copy/host/: Cargo.toml
verifier copy/host/src/: main.rs
verifier copy/methods/: build.rs
verifier copy/methods/guest/src/: main.rs
verifier/host/: Cargo.toml
verifier/host/src/: main.rs
verifier/methods/: Cargo.toml
verifier/methods/guest/: Cargo.toml
verifier/methods/guest/.cargo/: config.toml
verifier/methods/guest/src/: main.rs
verifier/methods/src/: lib.rs
(+61 files in other folders)
